[package]
name = "env-snapshot"
version = "0.2.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "Save and reload an entire environment on demand"
documentation = "https://docs.rs/env-snapshot"
readme = "README.md"
homepage = "https://github.com/ewpratten/env-snapshot"
repository = "https://github.com/ewpratten/env-snapshot"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
flexbuffers = "2.0"
subprocess = "0.2"
autojson = "0.1"